src/ingress/ingress-stage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neobank-merchant-frontend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: apis-neobank-merchant-staging.completefarmer.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: cf-neobank-merchant-frontend
            port:
              number: 80
