src/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neobank-merchant-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: apis-neobank-merchant-staging.completefarmer.com
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: neobank-merchant-frontend
            port:
              number: 80
